Fixed responsive issue on iPhone Portrait

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .WhiteBox {
-    width: 960px;
+    /* width: 960px; */
     background: white;
     margin: auto;   
     overflow: hidden;
